src/test/ui/union/union-nonrepresentable.stderr
error[E0072]: recursive type `U` has infinite size
  --> $DIR/union-nonrepresentable.rs:3:1
   |
LL | union U {
   | ^^^^^^^ recursive type has infinite size
LL |     a: u8,
LL |     b: U,
   |        - recursive without indirection
   |
help: insert some indirection to make `U` representable
   |
LL |     b: Box<U>,
   |        ^^^^ ^
LL |     b: Rc<U>,
   |        ^^^ ^
LL |     b: &U,
   |        ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0072`.
